test/trivial/deitz/test_integer_method3.chpl
proc int.print() {
  writeln("int(32).print = ", this);
}

var i : int = 12;
i.print();
var j : uint = 14;
j.print();
